Add create external resource method
