# server/src/data-layer/services/ExternalResourceDataService.ts
@@ -1,5 +1,6 @@
 import FirestoreCollections from 'data-layer/adapters/FirestoreCollections'
 import type { ExternalResource } from 'data-layer/models/ExternalResource'
+import { createExternalResourceRequest } from 'service-layer/request-models/ExternalResourceRequests'
 
 export class ExternalResourceDataService {
   /**
@@ -25,5 +26,20 @@ export class ExternalResourceDataService {
     const externalResourceSnapshot =
       await FirestoreCollections.externalResources.doc(id).get()
     return externalResourceSnapshot.data()
+  }
+
+  /**
+   * Makes a new external resource in the Firestore collection.
+   *
+   * @param externalResource The external resource to create.
+   * @returns A promise that resolves when the creation is complete.
+   */
+  public static async createExternalResource(
+    externalResource: createExternalResourceRequest,
+  ): Promise<ExternalResource> {
+    const docRef = await FirestoreCollections.externalResources.doc()
+    await docRef.set({id: docRef.id, ...externalResource})
+    const createdResourceSnapshot = await docRef.get()
+    return createdResourceSnapshot.data()
   }
 }
