# server/src/middleware/__generated__/swagger.json
@@ -63,6 +63,32 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Pick_ExternalResource.Exclude_keyofExternalResource.id__": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"url": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"title",
+					"url"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_ExternalResource.id_": {
+				"$ref": "#/components/schemas/Pick_ExternalResource.Exclude_keyofExternalResource.id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"createExternalResourceRequest": {
+				"$ref": "#/components/schemas/Omit_ExternalResource.id_"
+			},
 			"CommonResponse": {
 				"properties": {
 					"error": {
@@ -228,6 +254,33 @@
 				},
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateExternalResource",
+				"responses": {
+					"201": {
+						"description": "Successfully created external resource",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetExternalResourceResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/createExternalResourceRequest"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/external-resources/{id}": {
