# server/src/service-layer/request-models/ExternalResourceRequests.ts
@@ -1,0 +1,5 @@
+import type { ExternalResource } from 'data-layer/models/ExternalResource'
+
+export type createExternalResourceRequest = Omit<ExternalResource, 'id'>
+
+export type updateExternalResourceRequest = Partial<createExternalResourceRequest>
